Fixed Lambdas project